// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request wrapper Failed request 1`] = `
Array [
  Object {
    "action": "test-action",
    "domain": "test-domain",
    "requestId": 2,
    "type": "REQUEST_SUBMITTED",
  },
  Object {
    "action": "test-action",
    "domain": "test-domain",
    "error_message": "Invalid request",
    "requestId": 2,
    "type": "REQUEST_ERROR",
  },
  Object {
    "message": "Invalid request",
    "redirect": false,
    "type": "SET_ERROR_MESSAGE",
  },
]
`;

exports[`Request wrapper Successful request 1`] = `
Array [
  Object {
    "action": "test-action",
    "domain": "test-domain",
    "requestId": 1,
    "type": "REQUEST_SUBMITTED",
  },
  Object {
    "action": "test-action",
    "domain": "test-domain",
    "requestId": 1,
    "type": "REQUEST_COMPLETED",
  },
]
`;
